--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color: #151516;
+  color: white;
+}
+.App ul {
+  list-style: none;
 }
 
 .App-logo {
@@ -14,7 +19,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #232425;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
